--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "sass": "^1.63.6",
     "scss": "^0.2.4",
     "swiper": "^10.0.4",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
