--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "sass": "^1.63.6",
     "scss": "^0.2.4",
+    "smtpjs": "^0.0.1",
     "swiper": "^10.0.4",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
